--- a/html/javascript.html
+++ b/html/javascript.html
@@ -4,21 +4,42 @@
 	</head>
 	<body>
 		<input id="night_day" type="button" value="night" onclick="
-    if(document.querySelector('#night_day').value === 'night'){
-      document.querySelector('body').style.backgroundColor = 'black';
-      document.querySelector('body').style.color = 'white';
-      document.querySelector('#night_day').value = 'day';
-    } else {
-      document.querySelector('body').style.backgroundColor = 'white';
-      document.querySelector('body').style.color = 'black';
-      document.querySelector('#night_day').value = 'night';
-    }
-  ">
-
+   		    nightDayHandler(this);
+		  ">
 		<input type="button" value="hi" onclick="alert('hi')">
 		<input type="text" onchange="alert('changed')">
 		<input type="text" onkeydown="alert('key down!')">
 
 
 	</body>
+	<script>
+		  function LinksSetColor(color){
+  		  var alist = document.querySelectorAll('a');
+  		  var i = 0;
+ 		   while(i < alist.length){
+		      alist[i].style.color = color;
+		      i = i + 1;
+ 		   }
+		  }
+		  function BodySetColor(color){
+		    document.querySelector('body').style.color = color;
+  		}
+ 		 function BodySetBackgroundColor(color){
+		    document.querySelector('body').style.backgroundColor = color;
+		  }
+		  function nightDayHandler(self){
+ 		   var target = document.querySelector('body');
+ 		   if(self.value === 'night'){
+ 		     Body.setBackgroundColor('black');
+ 		     Body.setColor('white');
+ 		     self.value = 'day';
+		      Links.setColor('powderblue');
+		    } else {
+ 		     Body.setBackgroundColor('white');
+ 		     Body.setColor('black');
+  		    self.value = 'night';
+  		    Links.setColor('blue');
+ 		   }
+		  }
+	</script>
 </html>
